Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-5393

Incorrect namespaces for included types

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.15.0
    • Haxe - Compiler
    • None
    • Patch Available

    Description

      Fully qualified references to imported types are not treated corectly if a namespace part starts with uppercase letters. This is illegal in Haxe. The attached test case shows this at the "Broken" service method, which is not compileable.

      Expected behaviour is, that the name gets converted in the exact similar way as the "package" statement at the top of the file.

      Attachments

        1. BugTwo.thrift
          0.4 kB
          Jens Geyer
        2. BugOne.thrift
          0.3 kB
          Jens Geyer

        Issue Links

          Activity

            People

              jensg Jens Geyer
              jensg Jens Geyer
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 20m
                  20m