THRIFT-5393 Incorrect namespaces for included types Client: hx Patch: Jens Geyer